concord_macros/tests/dsl/fail/fail_duplicate_behavior.stderr
error: duplicate behavior `read`
 --> tests/dsl/fail/fail_duplicate_behavior.rs:8:18
  |
8 |         behavior read { retry off }
  |                  ^^^^
